2022-12-17  Alex Kotov  <kotovalexarian@gmail.com>

	* src/multiboot2/*_print.c: Print some values in hex

2022-12-16  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Feature "--with[out]-multiboot2" has been added
	* include/kernaux/multiboot2.h: Has been made stable

2022-12-14  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Enable shared library

2022-12-13  Alex Kotov  <kotovalexarian@gmail.com>

	* tests/Makefile.am: Fix FreeBSD builds

2022-12-12  Alex Kotov  <kotovalexarian@gmail.com>

	* examples/Makefile.am: Fix builds without pthreads
	* include/: Non-conditional headers (except <kernaux/version.h>)

2022-12-11  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/macro.h: Macro "KERNAUX_STATIC_TEST" has been added

2022-12-10  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/macro.h: Macros "KERNAUX_CAST_(VAR|CONST)" have been added

2022-12-09  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/generic/display.h: The header has been added

2022-12-08  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/*.h: Definition "KERNAUX_BITFIELDS" has been added

2022-12-05  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.6.1 released