@@ -42,6 +42,7 @@
 
 /Makefile.in
 /examples/Makefile.in
+/fixtures/Makefile.in
 /include/Makefile.in
 /libc/Makefile.in
 /libc/include/Makefile.in
@@ -77,6 +78,7 @@
 
 /Makefile
 /examples/Makefile
+/fixtures/Makefile
 /include/Makefile
 /libc/Makefile
 /libc/include/Makefile
