@@ -13,6 +13,10 @@ endif
 
 SUBDIRS += .
 
+if ENABLE_FIXTURES
+SUBDIRS += fixtures
+endif
+
 if ENABLE_CHECKS
 SUBDIRS += examples tests
 endif
