@@ -1,0 +1,3 @@
+include $(top_srcdir)/make/shared.am
+
+noinst_PROGRAMS =
